--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 springfox.documentation.swagger.v2.path=/api-docs
-server.contextPath=
+server.servlet.context-path=/
+# It is not workc :c
+#server.address=
 server.port=5000
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/holidaydb
+spring.datasource.username=root
+spring.datasource.password=1111
